# mpss

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/actions/setup-vcpkg/: action.yml
.github/scripts/: run-android-instrumentation.sh
.github/workflows/: attestation-capability-probe.yml  ci-all-platforms.yml  ci.yml  codeql.yml  dependency-review.yml  lint.yml  sanitizers.yml
ci-probe/: claim_probe.cpp  macos_enroll_probe.sh  se_probe.swift  vbs_probe.cpp  vbs_root_probe.cpp  vbs_verify_probe.cpp
cmake/: ios_simulator_tests.cmake  ios_xcframework.cmake  mpssConfig.cmake.in
docs/: attestation-design.md  attestation-validation.md
mpss/: CMakeLists.txt  attestation.h  interaction_handler.h  key_creation.h  key_info.h  log.cpp  log.h  mpss.cpp  mpss.h
mpss-attest-verify/: CMakeLists.txt  android_key_attestation.cpp  android_key_attestation.h  attestation_verifier.cpp  attestation_verifier.h  verify_apple_acme.cpp  verify_apple_acme.h  windows_tpm_claim_verifier.cpp  windows_tpm_claim_verifier.h
mpss-openssl/provider/: CMakeLists.txt  decoder.cpp  decoder.h  digest.cpp  encoder.cpp  keymgmt.cpp  keymgmt.h  provider.cpp  reference.cpp  reference.h  signature.cpp  store.cpp  store.h
mpss-openssl/utils/: names.h  ossl_helpers.cpp  utils.h
mpss/impl/: backend_registry.cpp  backend_registry.h  os_backend.cpp  os_backend.h
mpss/impl/android/: JNIHelper.cpp  JNIHelper.h  android_keypair.cpp  android_keypair.h  android_utils.cpp  android_utils.h  mpss_impl.cpp
mpss/impl/android/java/: KeyManagement.java  MemKeyStore.java
mpss/impl/apple/: apple_api_wrapper.h  apple_api_wrapper.m  apple_keychain_keypair.cpp  apple_keypair.cpp  apple_keypair.h  apple_result.h  apple_se_keypair.cpp  apple_se_wrapper.h  apple_se_wrapper.swift  apple_utils.cpp  apple_utils.h  attestation_policy.h  mpss_impl.cpp
mpss/impl/windows/: CMakeLists.txt  crypto_params.h  mpss_impl.cpp  ncrypt_handle.h  win_attestation.cpp  win_attestation.h  win_keypair.h  win_vbs_bundle.cpp  win_vbs_bundle.h
mpss/impl/yubikey/: terminal_interaction_handler.cpp  yk_backend.cpp  yk_backend.h  yk_keypair.cpp  yk_piv.cpp  yk_piv.h  yk_utils.cpp  yk_utils.h
mpss/utils/: unique_resource.h  utilities.h
pipelines/: android.yaml  ios.yaml  jobs.yaml  nix.yaml  pipeline-CI-Debug-All.yaml  pipeline-CI-Release-All.yaml  windows.yaml
ports/mpss/: portfile.cmake  usage  vcpkg.json
tests/: CMakeLists.txt  android_attestation_verifier_tests.cpp  android_tests.cpp  attestation_apple_acme_tests.cpp  attestation_tests.cpp  attestation_windows_e2e_tests.cpp  attestation_windows_tpm_vector.h  attestation_windows_verifier_tests.cpp  mpss_openssl_e2e_test.cpp  mpss_openssl_mtls_test.cpp  mpss_openssl_tests.cpp  mpss_tests.cpp  mpss_win32_mock_tests.cpp  openssl_raii.h  test_entry.cpp  test_entry.h  test_runner.cpp  vcpkg.json
tests/android/: .gitignore  CMakeLists.txt  android_tests.cpp  build.gradle  settings.gradle  test_runner.cpp
tests/android/app/: build.gradle
tests/android/app/src/main/: AndroidManifest.xml
tests/android/app/src/main/java/com/microsoft/research/mpss/tests/: TestRunner.java
tests/android/jni/: CMakeLists.txt  jni_test_runner.cpp  vcpkg.json
tests/android/src/androidTest/java/com/microsoft/research/mpss/test/: NativeInstrumentedTest.java
tests/android/src/main/: AndroidManifest.xml
tests/android/src/main/java/com/microsoft/research/mpss/test/: NativeTests.java
tests/goverify/: go.mod  go.sum  main.go
tests/ios/: CMakeLists.txt  Info.plist.in  main.m  mpss_ios_test_host.entitlements  mpss_xctest.mm
tests/mock_pki/: android_fixtures.cpp  android_fixtures.h  mock_pki.cpp  mock_pki.h  test_ca.cpp  test_ca.h
